# internal/handlers/get_group_schedule_handler.go
@@ -21,11 +21,11 @@ func (a *App) GetGroupScheduleHandler(c echo.Context) error {
 	uuid := c.Param("uuid")
 	var scheduleItems []models.ScheduleItem
 
-	// Загрузка расписания для группы через связь многие-ко-многим
 	if err := a.DB.
 		Preload("Groups").
 		Preload("Teachers").
 		Preload("Audiences").
+		Preload("Disciplines").
 		Joins("JOIN schedule_item_groups ON schedule_item_groups.schedule_item_id = schedule_items.id").
 		Joins("JOIN groups ON groups.id = schedule_item_groups.group_id").
 		Where("groups.uuid = ?", uuid).
