# internal/models/schedule.go
@@ -1,6 +1,7 @@
 package models
 
 import (
+	"encoding/json"
 	"time"
 )
 
@@ -15,21 +16,61 @@ type Schedule struct {
 }
 
 type ScheduleItem struct {
-	ID         uint       `json:"id" gorm:"primarykey"`
-	CreatedAt  time.Time  `json:"created_at"`
-	UpdatedAt  time.Time  `json:"updated_at"`
-	DeletedAt  time.Time  `json:"deleted_at,omitempty" gorm:"index"`
-	Day        int        `json:"day"`
-	Time       int        `json:"time"`
-	Week       string     `json:"week"`
-	Groups     []Group    `json:"groups" gorm:"many2many:schedule_item_groups;"`
-	Stream     string     `json:"stream"`
-	EndTime    string     `json:"endTime"`
-	Teachers   []Teacher  `json:"teachers" gorm:"many2many:schedule_item_teachers;"`
-	Audiences  []Audience `json:"audiences" gorm:"many2many:schedule_item_audiences;"`
-	StartTime  string     `json:"startTime"`
-	Discipline Discipline `json:"discipline" gorm:"embedded"`
-	Permission string     `json:"permission"`
+	ID          uint         `json:"id" gorm:"primarykey"`
+	CreatedAt   time.Time    `json:"created_at"`
+	UpdatedAt   time.Time    `json:"updated_at"`
+	DeletedAt   time.Time    `json:"deleted_at,omitempty" gorm:"index"`
+	Day         int          `json:"day"`
+	Time        int          `json:"time"`
+	Week        string       `json:"week"`
+	Groups      []Group      `json:"groups" gorm:"many2many:schedule_item_groups;"`
+	Stream      string       `json:"stream"`
+	EndTime     string       `json:"endTime"`
+	Teachers    []Teacher    `json:"teachers" gorm:"many2many:schedule_item_teachers;"`
+	Audiences   []Audience   `json:"audiences" gorm:"many2many:schedule_item_audiences;"`
+	StartTime   string       `json:"startTime"`
+	Disciplines []Discipline `json:"disciplines" gorm:"many2many:schedule_item_disciplines;"`
+	// Временное поле для парсинга JSON
+	DisciplineRaw Discipline `json:"discipline" gorm:"-"`
+	Permission    string     `json:"permission"`
+}
+
+// Кастомная сериализация для ScheduleItem (пока что только таким методом смог убрать пустую дисциплину с id 0 в ответе)
+func (s ScheduleItem) MarshalJSON() ([]byte, error) {
+	type Alias ScheduleItem
+	return json.Marshal(&struct {
+		ID          uint         `json:"id"`
+		CreatedAt   time.Time    `json:"created_at"`
+		UpdatedAt   time.Time    `json:"updated_at"`
+		DeletedAt   time.Time    `json:"deleted_at"`
+		Day         int          `json:"day"`
+		Time        int          `json:"time"`
+		Week        string       `json:"week"`
+		Groups      []Group      `json:"groups"`
+		Stream      string       `json:"stream"`
+		EndTime     string       `json:"endTime"`
+		Teachers    []Teacher    `json:"teachers"`
+		Audiences   []Audience   `json:"audiences"`
+		StartTime   string       `json:"startTime"`
+		Disciplines []Discipline `json:"disciplines"`
+		Permission  string       `json:"permission"`
+	}{
+		ID:          s.ID,
+		CreatedAt:   s.CreatedAt,
+		UpdatedAt:   s.UpdatedAt,
+		DeletedAt:   s.DeletedAt,
+		Day:         s.Day,
+		Time:        s.Time,
+		Week:        s.Week,
+		Groups:      s.Groups,
+		Stream:      s.Stream,
+		EndTime:     s.EndTime,
+		Teachers:    s.Teachers,
+		Audiences:   s.Audiences,
+		StartTime:   s.StartTime,
+		Disciplines: s.Disciplines,
+		Permission:  s.Permission,
+	})
 }
 
 type Group struct {
@@ -65,8 +106,12 @@ type Audience struct {
 }
 
 type Discipline struct {
-	Abbr      string `json:"abbr"`
-	ActType   string `json:"actType"`
-	FullName  string `json:"fullName"`
-	ShortName string `json:"shortName"`
+	ID        uint      `json:"id" gorm:"primarykey"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	DeletedAt time.Time `json:"deleted_at,omitempty" gorm:"index"`
+	Abbr      string    `json:"abbr"`
+	ActType   string    `json:"actType"`
+	FullName  string    `json:"fullName"`
+	ShortName string    `json:"shortName"`
 }
